# suricata-rules-update

./: Cargo.toml  README.md
src/: config.rs  main.rs  rules.rs  sources.rs  update.rs
