[package]
name = "suricata-rules-update"
version = "0.1.0"
edition = "2021"
description = "Suricata rule update tool (Rust implementation)"
license = "GPL-2.0-only"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for downloading rules
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }

# Serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Compression handling
flate2 = "1"            # gzip
tar = "0.4"             # tar archives

# File system operations
dirs = "5"              # XDG directories
walkdir = "2"           # recursive directory traversal

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing for integrity checks
md5 = "0.7"
sha2 = "0.10"

# URL parsing
url = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "suricata-rules-update"
path = "src/main.rs"
